--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.0",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongodb": "^5.0.0",
+    "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
   }
 }
