--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-JWT_SECRET_KEY = OFSSecrectkey
-MONGODB_PASSWORD  = Mongodb009%40
+JWT_SECRET_KEY=OFSSecrectkey
+MONGODB_PASSWORD=Mongodb009%40
+PORT=9000
